SCRUM-47 : feat(schedule-service) - 대상자 파일 업로드 요청 도메인 개발 완료 - 단위 테스트 작성 완료