@@ -1,19 +1,17 @@
 package com.ums.schedule.application.ums.email.attachment;
 
 
-import com.ums.schedule.application.ums.email.attachment.model.AttachmentCreateCommand;
-import com.ums.schedule.application.ums.email.convert.ConvertedAttachment;
-import com.ums.schedule.application.ums.email.security.SecurityMail;
+import com.ums.schedule.application.ums.email.attachment.model.AttachmentContext;
+import com.ums.schedule.application.ums.email.template.query.model.EmailTemplateContentResult;
 import com.ums.schedule.domain.message.email.attachment.EmailAttachment;
 import com.ums.schedule.domain.message.email.attachment.EmailAttachmentJpaRepository;
-import com.ums.schedule.domain.message.email.SecurityMailPolicy;
 import com.ums.schedule.domain.message.email.EmailSendMessage;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,14 +19,11 @@ public class EmailAttachmentCreateService {
     private final EmailAttachmentJpaRepository repository;
 
     @Transactional
-    public List<EmailAttachment> create(EmailSendMessage sendMessage, SecurityMail securityMail, List<ConvertedAttachment> commands) {
-        SecurityMailPolicy securityPolicy = Optional.ofNullable(securityMail)
-                .map(SecurityMailPolicy::of)
-                .orElse(null);
-        List<EmailAttachment> attachmentList = commands.stream()
-                .map(command -> AttachmentCreateCommand.of(sendMessage, securityPolicy, command))
-                .map(EmailAttachment::of)
-                .toList();
+    public List<EmailAttachment> create(EmailSendMessage sendMessage, List<EmailTemplateContentResult> templates) {
+        List<EmailAttachment> attachmentList = templates.stream()
+                .map(t -> AttachmentContext.of(t))
+                .map(ctx -> EmailAttachment.of(sendMessage, ctx))
+                .collect(Collectors.toList());
 
         repository.saveAll(attachmentList);
 
